attempt at preventing the slider from jumping around onload

--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ h1, h2, h3 {
 .vis-holder {
 	width: 100%;
 	height: 100%;
+
+}
+
+.vis-holder-grid {
+	width: 100%;
+	height: 100%;
 	display: grid;
 	grid-template-columns: auto auto auto auto;
 	grid-template-rows: auto auto auto auto;
